--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>9doggy</title>
   </head>
   <body>
-    start
+    <header>header</header>
+    <div>slide_banner</div>
+    <main>main</main>
+    <footer>footer</footer>
   </body>
 </html>
