created css file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
     <title>9doggy</title>
   </head>
   <body>
     <header>header</header>
-    <div>slide_banner</div>
+    <div class="slide_banner">slide_banner</div>
     <main>main</main>
     <footer>footer</footer>
   </body>
