added logo & favicon

--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="icon" href="img/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" href="img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="img/favicon/android-icon-48x48.png" sizes="48x48" />
     <title>9doggy</title>
   </head>
   <body>
-    <header>header</header>
+    <header>
+      <ul class="menus">
+        <li class="menu__logo"><img src="./img/logo/9doggylogo.png" /></li>
+        <li class="menu__shop">shop</li>
+        <li class="menu__community">community</li>
+        <li class="menu__cart">cart</li>
+        <li class="menu__account">account</li>
+      </ul>
+    </header>
     <div class="slide_banner">slide_banner</div>
     <main>main</main>
     <footer>footer</footer>
   </body>
+  <script
+    src="https://kit.fontawesome.com/cbc86f8bd3.js"
+    crossorigin="anonymous"
+  ></script>
+  <script src="js/header.js"></script>
 </html>
