--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   </head>
   <body>
     <header>
-      <ul class="menus">
-        <li class="menu__logo"><img src="./img/logo/9doggylogo.png" /></li>
-        <li class="menu__shop">shop</li>
-        <li class="menu__community">community</li>
-        <li class="menu__cart">cart</li>
-        <li class="menu__account">account</li>
-      </ul>
+      <div class="header">
+        <a><img src="./img/logo/9doggylogo.png" /></a>
+        <ul class="menus">
+          <li class="menu__shop">shop</li>
+          <li class="menu__community">community</li>
+        </ul>
+        <div class="menu__cart">cart</div>
+        <div class="menu__account">account</div>
+      </div>
     </header>
     <div class="slide_banner">slide_banner</div>
     <main>main</main>
