--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <title>9doggy</title>
   </head>
   <body>
-    <header>
-      <div class="header">
-        <a><img src="./img/logo/9doggylogo.png" /></a>
-        <ul class="menus">
-          <li class="menu__shop">shop</li>
-          <li class="menu__community">community</li>
-        </ul>
-        <div class="menu__cart">cart</div>
-        <div class="menu__account">account</div>
-      </div>
-    </header>
+    <div class="header">
+      <a class="logo"><div class="logo__img"></div></a>
+      <ul class="menus">
+        <li class="menu__shop">shop</li>
+        <li class="menu__community">community</li>
+      </ul>
+      <div class="cart">cart</div>
+      <div class="account">account</div>
+    </div>
     <div class="slide_banner">slide_banner</div>
     <main>main</main>
     <footer>footer</footer>
@@ -30,5 +28,4 @@
     src="https://kit.fontawesome.com/cbc86f8bd3.js"
     crossorigin="anonymous"
   ></script>
-  <script src="js/header.js"></script>
 </html>
