--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="header">
       <a class="logo"><div class="logo__img"></div></a>
       <ul class="menus">
-        <li class="menu__shop">shop</li>
-        <li class="menu__community">community</li>
+        <li class="menu__shop">SHOP</li>
+        <li class="menu__community">COMMUNITY</li>
       </ul>
-      <div class="cart">cart</div>
-      <div class="account">account</div>
+      <div class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
+      <div class="account"><i class="fa-solid fa-user fa-lg"></i></div>
     </div>
-    <div class="slide_banner">slide_banner</div>
+    <div class="slide_banner"></div>
     <main>main</main>
     <footer>footer</footer>
   </body>
