--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
     <title>9doggy</title>
   </head>
   <body>
-    <div class="header">
-      <a class="logo"><div class="logo__img"></div></a>
-      <ul class="menus">
-        <li class="menu__shop">SHOP</li>
-        <li class="menu__community">COMMUNITY</li>
-      </ul>
-      <div class="cart"><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
-      <div class="account"><i class="fa-solid fa-user fa-lg"></i></div>
+    <div class="wrapper">
+      <div class="header">
+        <a class="logo"><div class="logo__img"></div></a>
+        <ul class="menus">
+          <li class="menu__shop hover">SHOP</li>
+          <li class="menu__community hover">COMMUNITY</li>
+        </ul>
+        <div class="cart hover">
+          <i class="fa-solid fa-cart-shopping fa-lg"></i>
+        </div>
+        <div class="account hover"><i class="fa-solid fa-user fa-lg"></i></div>
+      </div>
+      <div class="slide_banner">
+        <h1>언제나 그 곁에 함께, <br />구도기도 있어 드리겠습니다.</h1>
+        <h2>
+          "어 ? 사료가 다 떨어졌네 ?"<br />
+          구도기를 구독하시면 걱정하실 필요 없습니다.<br />
+          행복한 반려라이프를 구도기가 돕겠습니다.
+        </h2>
+        <div class="sub__btn">구독 시작</div>
+      </div>
+      <main>main</main>
+      <footer>footer</footer>
     </div>
-    <div class="slide_banner"></div>
-    <main>main</main>
-    <footer>footer</footer>
   </body>
   <script
     src="https://kit.fontawesome.com/cbc86f8bd3.js"
