slide__banner day2

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <div class="account hover"><i class="fa-solid fa-user fa-lg"></i></div>
       </div>
       <div class="slide_banner">
-        <h1>언제나 그 곁에 함께, <br />구도기도 있어 드리겠습니다.</h1>
-        <h2>
-          "어 ? 사료가 다 떨어졌네 ?"<br />
-          구도기를 구독하시면 걱정하실 필요 없습니다.<br />
-          행복한 반려라이프를 구도기가 돕겠습니다.
-        </h2>
-        <div class="sub__btn">구독 시작</div>
+        <div class="slide__banner__text">
+          <h1>언제나 그 곁에 함께, <br />구도기도 있겠습니다</h1>
+          <h2>
+            "어 ? 사료가 다 떨어졌네 ?"<br />
+            구도기와 함께라면 걱정하지 마세요.<br />
+            행복한 반려라이프를 돕겠습니다
+          </h2>
+          <div class="sub__btn">구독 시작</div>
+        </div>
       </div>
       <main>main</main>
       <footer>footer</footer>
