--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
           <div class="sub__btn">구독 시작</div>
         </div>
       </div>
-      <main>main</main>
+      <main>
+        <div class="features">
+          <div class="feature">
+            <h1>균형잡힌 영양소와 안전성</h1>
+            <div class="feature__img"></div>
+            <h2>
+              AAFCO와 FEDIAF의 인증을 받은<br />
+              안전한 사료를 제공합니다
+            </h2>
+          </div>
+          <div class="feature"></div>
+          <div class="feature"></div>
+          <div class="feature"></div>
+        </div>
+      </main>
       <footer>footer</footer>
     </div>
   </body>
