--- a/index.html
+++ b/index.html
@@ -38,15 +38,48 @@
         <div class="features">
           <div class="feature">
             <h1>균형잡힌 영양소와 안전성</h1>
-            <div class="feature__img"></div>
+            <div class="feature__img">
+              <img src="./img/feature/fea1.jpg" width="550px" height="550px" />
+            </div>
             <h2>
               AAFCO와 FEDIAF의 인증을 받은<br />
               안전한 사료를 제공합니다
             </h2>
           </div>
-          <div class="feature"></div>
-          <div class="feature"></div>
-          <div class="feature"></div>
+          <div class="feature">
+            <h1>원하는 대로 편하게 기간 설정</h1>
+            <div class="feature__img">
+              <img src="./img/feature/fea2.png" width="550px" height="550px" />
+              <div class="feature__img__sub">
+                배송주기 : 1달마다
+                <i
+                  class="fa-solid fa-up-right-and-down-left-from-center fa-rotate-by"
+                  style="--fa-rotate-angle: 135deg"
+                ></i>
+              </div>
+            </div>
+            <h2>내 애견에 맞춰 자유롭게 설정하세요</h2>
+          </div>
+          <div class="feature">
+            <h1>부담 없는 구독</h1>
+            <div class="feature__img">
+              <img src="./img/feature/fea3.jpg" width="550px" height="550px" />
+            </div>
+            <h2>
+              원치 않게 결제되지 않도록<br />
+              구독 3일 전에 미리 알려드립니다
+            </h2>
+          </div>
+          <div class="feature">
+            <h1>무료 배송과 다양한 할인</h1>
+            <div class="feature__img">
+              <img src="./img/feature/fea4.jpg" width="550px" height="550px" />
+            </div>
+            <h2>
+              아무리 좋은 제품도 가격이 부담스러우면 망설여지죠.<br />
+              합리적인 가격으로 구매해보세요
+            </h2>
+          </div>
         </div>
       </main>
       <footer>footer</footer>
