index.html prototype 1

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="feature__img">
               <img src="./img/feature/fea2.png" width="550px" height="550px" />
               <div class="feature__img__sub">
-                배송주기 : 1달마다
+                배송주기 : 1달마다&nbsp;
                 <i
                   class="fa-solid fa-up-right-and-down-left-from-center fa-rotate-by"
                   style="--fa-rotate-angle: 135deg"
@@ -74,6 +74,29 @@
             <h1>무료 배송과 다양한 할인</h1>
             <div class="feature__img">
               <img src="./img/feature/fea4.jpg" width="550px" height="550px" />
+              <div class="feature__img__price">
+                <span class="fullprice"
+                  >판매가
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18,900원</span
+                >
+                <div class="dcprice">
+                  <span class="dcsub"
+                    >정기구독 할인&nbsp;&nbsp;<span class="emphasize"
+                      >-1,890</span
+                    >원</span
+                  >
+                  <span class="deliverycost"
+                    >배송비
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                      class="emphasize"
+                      >무료</span
+                    ></span
+                  >
+                </div>
+                <span class="totalprice"
+                  >총 결제금액&nbsp;&nbsp;&nbsp; 17,010원</span
+                >
+              </div>
             </div>
             <h2>
               아무리 좋은 제품도 가격이 부담스러우면 망설여지죠.<br />
