--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="menus">
           <li class="menu__shop hover">SHOP</li>
           <li class="menu__community hover">COMMUNITY</li>
+          <div class="community__selector">메뉴 선택</div>
         </ul>
         <div class="cart hover">
           <i class="fa-solid fa-cart-shopping fa-lg"></i>
@@ -105,7 +106,9 @@
           </div>
         </div>
       </main>
-      <footer>footer</footer>
+      <footer>
+        <span class="footer__text">© 9doggy Inc. ALL Rights Reserved</span>
+      </footer>
     </div>
   </body>
   <script
