--- a/board.html
+++ b/board.html
@@ -27,7 +27,7 @@
         <div class="account hover"><i class="fa-solid fa-user fa-lg"></i></div>
       </div>
       <main>
-        <h1>게시판</h1>
+        <h1>커뮤니티</h1>
         <div class="board">
           <div class="board__row bheader">
             <div class="boardcell__no">번호</div>
@@ -41,7 +41,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -49,7 +52,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -57,7 +63,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -65,7 +74,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -73,7 +85,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -81,7 +96,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -89,7 +107,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -97,7 +118,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -105,7 +129,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
@@ -113,7 +140,10 @@
             <div class="boardcell__no">1</div>
             <div class="boardcell__title">안녕하세요 ?</div>
             <div class="boardcell__writer">테스터</div>
-            <div class="boardcell__date">2024.08.14 20:41</div>
+            <div class="boardcell__date">
+              <span class="date">2024.08.15</span>
+              <span class="time">20:38:15</span>
+            </div>
             <div class="boardcell__hit">111</div>
             <div class="boardcell__like">77</div>
           </div>
