board bottom start

--- a/board.html
+++ b/board.html
@@ -148,6 +148,29 @@
             <div class="boardcell__like">77</div>
           </div>
         </div>
+        <div class="board__btns">
+          <div class="board__sortbtns">
+            <div class="board__listbtn btn">전체글</div>
+            <div class="board__hitbtn btn">조회순</div>
+            <div class="board__likebtn btn">좋아요순</div>
+          </div>
+          <div class="board__writebtn btn">글쓰기</div>
+        </div>
+        <div class="board__pagination">
+          <a class="prev" href="#"><</a>
+          <a class="active" href="#">1</a>
+          <a class="pagination" href="#">2</a>
+          <a class="pagination" href="#">3</a>
+          <a class="pagination" href="#">4</a>
+          <a class="pagination" href="#">5</a>
+          <a class="pagination" href="#">6</a>
+          <a class="pagination" href="#">7</a>
+          <a class="pagination" href="#">8</a>
+          <a class="pagination" href="#">9</a>
+          <a class="pagination" href="#">10</a>
+          <a class="next" href="#">></a>
+        </div>
+        <div class="board__searchbar"></div>
       </main>
       <footer>
         <span class="footer__text">© 9doggy Inc. ALL Rights Reserved</span>
