community.html prototype complete

--- a/board.html
+++ b/board.html
@@ -170,7 +170,21 @@
           <a class="pagination" href="#">10</a>
           <a class="next" href="#">></a>
         </div>
-        <div class="board__searchbar"></div>
+        <div class="board__searchbar">
+          <select name="" id="" class="board__select">
+            <option>제목</option>
+            <option>제목 + 내용</option>
+            <option>내용</option>
+            <option>글쓴이</option>
+          </select>
+          <input type="text" class="board__text" />
+          <div class="board__search">
+            <i
+              class="fa-solid fa-magnifying-glass fa-2xl"
+              style="color: white"
+            ></i>
+          </div>
+        </div>
       </main>
       <footer>
         <span class="footer__text">© 9doggy Inc. ALL Rights Reserved</span>
