board.html protype and responsive complete

--- a/board.html
+++ b/board.html
@@ -154,7 +154,7 @@
             <div class="board__hitbtn btn">조회순</div>
             <div class="board__likebtn btn">좋아요순</div>
           </div>
-          <div class="board__writebtn btn">글쓰기</div>
+          <a href="write.html"><div class="board__writebtn btn">글쓰기</div></a>
         </div>
         <div class="board__pagination">
           <a class="prev" href="#"><</a>
