--- a/write.html
+++ b/write.html
@@ -28,6 +28,33 @@
       </div>
       <main>
         <h1>글쓰기</h1>
+        <div class="board__write">
+          <input
+            type="text"
+            class="write__title"
+            placeholder="제목을 입력해주세요."
+          />
+          <div class="write__upload">
+            <label class="upload__label"></label>
+            <span class="upload__desc">파일 업로드</span>
+            <input type="file" class="upload__file" />
+          </div>
+          <div class="write__desc">
+            <span class="desc__writer">글쓴이</span>
+            <span class="desc__date">2024.08.19</span>
+            <span class="desc__hit">조회수 : 111</span>
+            <span class="desc__like">좋아요 : 150</span>
+          </div>
+          <textarea
+            name="textarea"
+            class="write__textarea"
+            placeholder="내용내용내용"
+          ></textarea>
+          <div class="write__btns">
+            <div class="write__btn">취소</div>
+            <div class="write__btn">등록</div>
+          </div>
+        </div>
       </main>
       <footer>
         <span class="footer__text">© 9doggy Inc. ALL Rights Reserved</span>
