read.html start

--- a/read.html
+++ b/read.html
@@ -35,29 +35,38 @@
             >
             <span class="desc__date">2024.08.19</span>
           </div>
-          <input
-            type="text"
-            class="write__title"
-            placeholder="제목을 입력해주세요."
-            value="테스트"
-            readonly
-          />
-          <div class="write__upload">
-            <label for="upload__file" class="upload__label"
-              ><i class="fa-solid fa-image fa-lg"></i
-            ></label>
-            <span class="upload__desc">파일 업로드</span>
-            <input type="file" class="upload__file" id="upload__file" />
+
+          <div class="read__textarea">
+            <img
+              src="./img/feature/fea1.jpg"
+              width="400px"
+              height="400px"
+              class="read__img"
+            />
+            내용내용내용입니다.
           </div>
 
-          <textarea
-            name="textarea"
-            class="write__textarea"
-            placeholder="내용내용내용"
-          ></textarea>
-          <div class="write__btns">
-            <div class="write__btn">취소</div>
-            <div class="write__btn">등록</div>
+          <div class="read__reply">
+            <div class="reply__cnt">
+              <span style="color: #c6bfb9">댓글</span> 77개
+            </div>
+            <div class="reply__write">
+              <span class="reply__write__writer">글쓴이</span>
+              <div class="reply__write__inputbox">
+                <textarea
+                  name="inputbox__textarea"
+                  class="inputbox__textarea"
+                  placeholder="리플을 입력하세요"
+                ></textarea>
+                <div class="inputbox__btn">등록</div>
+              </div>
+            </div>
+            <div class="replies"></div>
+          </div>
+          <div class="read__btns">
+            <div class="read__btn">목록</div>
+            <div class="read__btn">수정</div>
+            <div class="read__btn">삭제</div>
           </div>
         </div>
       </main>
