--- a/read.html
+++ b/read.html
@@ -61,7 +61,205 @@
                 <div class="inputbox__btn">등록</div>
               </div>
             </div>
-            <div class="replies"></div>
+            <div class="replies">
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+                <div class="nested__reply">
+                  <div class="reply__header">
+                    <span class="reply__writer"
+                      ><span class="towriter">@용*지&nbsp;&nbsp; </span
+                      >안*민</span
+                    >
+                    <div class="reply__rightsection">
+                      <span class="reply__delete" style="color: #c08184"
+                        >삭제</span
+                      >
+                      <span class="reply__date">2024-08-22 20:04</span>
+                    </div>
+                  </div>
+                  <div class="reply__content">
+                    내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                    내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                    내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                  </div>
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+              <div class="reply">
+                <div class="reply__header">
+                  <span class="reply__writer">용*지</span>
+                  <div class="reply__rightsection">
+                    <span class="reply__delete" style="color: #c08184"
+                      >삭제</span
+                    >
+                    <span class="reply__date">2024-08-22 20:04</span>
+                  </div>
+                </div>
+                <div class="reply__content">
+                  내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                  내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                  내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="read__navi">
+            <div class="navi__next">
+              <div class="navi__left">
+                <span><i class="fa-solid fa-angle-up"></i></span>
+                <span style="color: #c6bfb9">다음글</span>
+                <span class="navi__title">다음글 테스트중이랍니다.</span>
+              </div>
+              <span class="navi__date">2024-08-23</span>
+            </div>
+            <div class="navi__prev">
+              <div class="navi__left">
+                <span><i class="fa-solid fa-angle-down"></i></span>
+                <span style="color: #c6bfb9">이전글</span>
+                <span class="navi__title">이전글 테스트중이랍니다.</span>
+              </div>
+              <span class="navi__date">2024-08-21</span>
+            </div>
           </div>
           <div class="read__btns">
             <div class="read__btn">목록</div>
