board frontend prototype complete

--- a/read.html
+++ b/read.html
@@ -80,8 +80,26 @@
                 <div class="nested__reply">
                   <div class="reply__header">
                     <span class="reply__writer"
-                      ><span class="towriter">@용*지&nbsp;&nbsp; </span
-                      >안*민</span
+                      ><span class="towriter"></span>안*민</span
+                    >
+                    <div class="reply__rightsection">
+                      <span class="reply__delete" style="color: #c08184"
+                        >삭제</span
+                      >
+                      <span class="reply__date">2024-08-22 20:04</span>
+                    </div>
+                  </div>
+                  <div class="reply__content">
+                    내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용
+                    내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용내용^^내용내용
+                    내용^^내내용내용내용^^내용내용내용^^내용내용내용^^용내용내용^^
+                  </div>
+                </div>
+                <div class="nested__reply">
+                  <div class="reply__header">
+                    <span class="reply__writer"
+                      ><span class="towriter">@안*민&nbsp;&nbsp; </span
+                      >성*훈</span
                     >
                     <div class="reply__rightsection">
                       <span class="reply__delete" style="color: #c08184"
