--- a/read.html
+++ b/read.html
@@ -45,6 +45,14 @@
             />
             내용내용내용입니다.
           </div>
+          <div class="read__likes">
+            <i
+              class="fa-solid fa-heart"
+              onclick="like()"
+              style="color: white"
+            ></i>
+            <span class="read__like">좋아요 1개</span>
+          </div>
 
           <div class="read__reply">
             <div class="reply__cnt">
@@ -295,4 +303,5 @@
     src="https://kit.fontawesome.com/cbc86f8bd3.js"
     crossorigin="anonymous"
   ></script>
+  <script src="./js/read.js"></script>
 </html>
